API framework update